# HammerSysTestTask

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx/conf.d/: nginx.conf
referral_system/: settings.py  urls.py
scripts/: scheduler.sh  web.sh
static/css/: style.css
static/js/: code_input.js  phone_input.js  profile.js
templates/: base.html  code_input.html  phone_input.html  profile.html
users/: apps.py  exceptions.py  models.py  scheduler.py  serializers.py  urls.py  utils.py  views.py
users/management/commands/: cleanup_expired_codes.py
